# o3de-extras

./: .automatedtesting.json  .gitattributes  .gitignore  .lfsconfig  LICENSE.txt  README.md  repo.json
Gems/AzQtComponentsForPython/Code/: CMakeLists.txt  generated_files.cmake
Gems/AzQtComponentsForPython/Code/Platform/Mac/: PAL_mac.cmake
Gems/AzQtComponentsForPython/Code/Platform/Windows/: PAL_windows.cmake
Gems/AzQtComponentsForPython/Code/Platform/iOS/: PAL_ios.cmake
Gems/ExternalProfilers/OptickProfiler/Code/: CMakeLists.txt  optick.patch  optickprofiler_files.cmake
Gems/ExternalProfilers/OptickProfiler/Code/Source/: CpuProfiler.cpp  CpuProfiler.h  OptickProfilerEventForwarder.cpp  OptickProfilerEventForwarder.h  ProfilerModule.cpp  ProfilerSystemComponent.cpp  ProfilerSystemComponent.h
Gems/ExternalProfilers/SuperluminalProfiler/Code/: CMakeLists.txt  superluminalprofiler_files.cmake
Gems/ExternalProfilers/SuperluminalProfiler/Code/Source/: CpuProfiler.cpp  CpuProfiler.h  ProfilerModule.cpp  ProfilerSystemComponent.cpp  ProfilerSystemComponent.h  SuperluminalProfilerEventForwarder.cpp  SuperluminalProfilerEventForwarder.h
Gems/ExternalProfilers/TracyProfiler/Code/: CMakeLists.txt  tracyprofiler_files.cmake
Gems/ExternalProfilers/TracyProfiler/Code/Source/: CpuProfiler.cpp  CpuProfiler.h  ProfilerModule.cpp  ProfilerSystemComponent.cpp  ProfilerSystemComponent.h  TracyProfilerEventForwarder.cpp  TracyProfilerEventForwarder.h
Gems/ROS2/: .gitignore  .licenserc.yaml  CMakeLists.txt  CONTRIBUTING.md  README  README.md  clang-format-13.sh  gem.json  repo.json  requirements.txt
Gems/ROS2/.github/ISSUE_TEMPLATE/: bug_report.md
Gems/ROS2/.github/workflows/: Build.yml  CodeChecks.yml  Documentation.yml
Gems/ROS2/Assets/: seedList.seed
Gems/ROS2/Assets/Gazebo/: BlueTransparent.material  Bricks.material  DarkYellow.material  Gold.material  LightBlueLaser.material  OrangeTransparent.material  Pedestrian.material  Residential.material  Turquoise.material  WoodFloor.material
Gems/ROS2/Assets/Materials/: wheel_material.physxmaterial
Gems/ROS2/Assets/Passes/: PipelineROSColor.pass  PipelineROSDepth.pass  PipelineRenderToTextureROSColor.pass  ROSPassTemplates.azasset
Gems/ROS2/Assets/Prefabs/Sensors/: CameraOrbbeck.prefab  Imu.prefab  LidarOS2.prefab
Gems/ROS2/Assets/Scripts/: SimpleTwistControl.lua
Gems/ROS2/Assets/Sdf/: empty.sdf
Gems/ROS2/Code/: CMakeLists.txt  FindROS2.cmake  checkROS2Distribution.cmake  frame_test_files.cmake  ros2_api_files.cmake  ros2_editor_api_files.cmake  ros2_editor_files.cmake  ros2_editor_private_files.cmake  ros2_editor_shared_api_files.cmake  ros2_editor_shared_files.cmake  ros2_editor_tests_files.cmake  ros2_environment_source.cmake  ros2_files.cmake  ros2_header_files.cmake  ros2_importer_tests_files.cmake  ros2_private_files.cmake  ros2_shared_api_files.cmake  ros2_shared_files.cmake  ros2_target_depends.cmake  ros2_tests_files.cmake
Gems/ROS2/Code/Include/ROS2/: ROS2Bus.h  ROS2EditorBus.h  ROS2GemUtilities.h  ROS2NamesBus.h  ROS2TypeIds.h
Gems/ROS2/Code/Platform/Common/: ros2_gcc.cmake
Gems/ROS2/Code/Platform/Linux/: PAL_linux.cmake
Gems/ROS2/Code/Platform/Mac/: PAL_mac.cmake
Gems/ROS2/Code/Platform/Windows/: PAL_windows.cmake
Gems/ROS2/Code/Platform/iOS/: PAL_ios.cmake
Gems/ROS2/Code/PythonTests/: CMakeLists.txt  SmokeTests_Periodic.py
Gems/ROS2/Code/PythonTests/tests/: SmokeTests_EnterGameModeWorks.py
Gems/ROS2/Code/Source/: LidarRaycaster.cpp  LidarRaycaster.h  LidarTemplate.h  ROS2EditorModule.cpp  ROS2EditorSystemComponent.cpp  ROS2EditorSystemComponent.h  ROS2GemUtilities.cpp  ROS2GemUtilities.h  ROS2LidarSensorComponent.cpp  ROS2LidarSensorComponent.h  ROS2Module.cpp  ROS2ModuleInterface.cpp  ROS2ModuleInterface.h  ROS2SystemComponent.cpp  ROS2SystemComponent.h  SimulationClock.cpp  SimulationClock.h  UrdfParser.cpp  UrdfParser.h
Gems/ROS2/Code/Source/Camera/: CameraCaptureScheduler.cpp  CameraCaptureScheduler.h  CameraPublishers.cpp  CameraPublishers.h  CameraSensor.cpp  CameraSensor.h  CameraSensorConfiguration.cpp  CameraSensorConfiguration.h  CameraSensorDescription.cpp  CameraSensorDescription.h  CameraUtilities.cpp  CameraUtilities.h  ROS2CameraSensorComponent.cpp  ROS2CameraSensorComponent.h  ROS2CameraSensorEditorComponent.cpp  ROS2CameraSensorEditorComponent.h  ROS2CameraSystemComponent.cpp  ROS2CameraSystemComponent.h  ROS2CameraSystemEditorComponent.cpp  ROS2CameraSystemEditorComponent.h  ROS2EditorCameraSystemComponent.cpp  ROS2EditorCameraSystemComponent.h
Gems/ROS2/Code/Source/Clients/: ROS2Module.cpp  ROS2SystemComponent.cpp  ROS2SystemComponent.h
Gems/ROS2/Code/Source/Clock/: ITimeSource.h  PhysicallyStableClock.cpp  ROS2Clock.cpp  ROS2ClockSystemComponent.cpp  ROS2ClockSystemComponent.h  ROS2TimeSource.cpp  ROS2TimeSource.h  RealTimeSource.cpp  RealTimeSource.h  SimulationClock.cpp  SimulationClock.h  SimulationTimeSource.cpp  SimulationTimeSource.h
Gems/ROS2/Code/Source/Communication/: PublisherConfiguration.cpp  QoS.cpp  SubscriberConfiguration.cpp  TopicConfiguration.cpp
Gems/ROS2/Code/Source/ContactSensor/: ROS2ContactSensorComponent.cpp  ROS2ContactSensorComponent.h
Gems/ROS2/Code/Source/EffortSensor/: ROS2EffortSensorComponent.cpp  ROS2EffortSensorComponent.h
Gems/ROS2/Code/Source/FactorySimulation/: ConveyorBeltComponent.cpp  ConveyorBeltComponent.h  ConveyorBeltComponentConfiguration.cpp  ConveyorBeltComponentConfiguration.h
Gems/ROS2/Code/Source/Frame/: NamespaceComputation.cpp  NamespaceComputation.h  NamespaceConfiguration.cpp  NamespaceConfiguration.h  ROS2FrameComponent.h  (+16 more)
Gems/ROS2/Code/Tests/: FbxGeneratorTest.cpp  GNSSTest.cpp  PIDTest.cpp  ROS2EditorTest.cpp  SdfImporterTest.cpp  SdfModel.h  SdfModelTest.cpp  SdfParserTest.cpp  SdfUtilsTest.cpp  UrdfParserTest.cpp  UrdfToFbxConverterTest.cpp
Gems/ROS2/Registry/: articulations.setreg  assetprocessor_settings.setreg  sceneassetimporter.setreg  sdfassetbuilder_settings.setreg
Gems/ROS2/docs/guides/: development_in_clion.md  pr_publishing.md  ros2-gem.md
Gems/ROS2/docs/user_guide/: ros2-gem.md
(+3615 files in other folders)
